<resources>
    <string name="app_name">Litprom Reader</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="open">Open</string>
    <string name="close">Close</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="pulse_string">Пульс Литпрома</string>
    <string name="new_text_string">Новое</string>
    <string name="section_string">Разделы</string>
    <string name="start_page_string">Главная</string>
    <string name="settings_string">Настройки</string>
    <string name="nav_novigator">Новигатор</string>
</resources>
